RbA Build/src/objects/Order_Financing__c.object
<CustomObject>
    <description>Junction object from Finance Programs to Order.</description>
    <fields>
        <fullName>Amount_Financed__c</fullName>
        <inlineHelpText>Amount Financed</inlineHelpText>
        <label>Amount Financed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Program__c</fullName>
        <label>Finance Program</label>
        <referenceTo>Finance_Program__c</referenceTo>
        <relationshipLabel>Order Financing</relationshipLabel>
        <relationshipName>Order_Financing</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Order__c</fullName>
        <label>Related Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Order Financing</relationshipLabel>
        <relationshipName>Order_Financing</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Order Financing</label>
    <nameField>
        <displayFormat>OrderFinancing-{00}</displayFormat>
        <label>Order Financing Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Financing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>